--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host 0.0.0.0 --port 80",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
+    "dompurify": "^3.2.4",
     "quill": "^2.0.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-quill-new": "^3.3.3",
