--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,15 +14,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ variables.DOCKER_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ variables.DOCKER_USERNAME }}/react-nginx-app:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/react-nginx-app:latest .
 
       - name: Push to Docker Hub
         run: |
-          docker push ${{ variables.DOCKER_USERNAME }}/react-nginx-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/react-nginx-app:latest
 
   deploy:
     needs: build-and-push
@@ -32,7 +32,7 @@ jobs:
       - name: Deploy to AWS Lightsail
         env:
           SSH_PRIVATE_KEY: ${{ secrets.LIGHTSAIL_SSH_PRIVATE_KEY }}
-          SERVER_IP: ${{ variables.LIGHTSAIL_SERVER_IP }}
+          SERVER_IP: ${{ secrets.LIGHTSAIL_SERVER_IP }}
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
@@ -41,7 +41,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no ubuntu@$SERVER_IP << 'EOF'
             docker stop react-nginx-app || true
             docker rm react-nginx-app || true
-            docker pull ${{ variables.DOCKER_USERNAME }}/react-nginx-app:latest
-            docker run -d -p 80:80 --name react-nginx-app ${{ variables.DOCKER_USERNAME }}/react-nginx-app:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/react-nginx-app:latest
+            docker run -d -p 80:80 --name react-nginx-app ${{ secrets.DOCKER_USERNAME }}/react-nginx-app:latest
             docker image prune -f  # 사용하지 않는 이미지 삭제
           EOF
