--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,7 @@ server {
     # Let's Encrypt 인증을 위한 경로 설정
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
+        allow all;
     }
 
     # location / {
