--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,23 +1,28 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name adminpage.p-e.kr;
-    # server_name localhost;
 
-    # Let's Encrypt 인증을 위한 경로 설정
-    location /.well-known/acme-challenge/ {
-        root /usr/share/nginx/html;
-        allow all;
-        default_type "text/plain";
-    }
-
-    # location / {
-    #     return 301 https://$host$request_uri;
-    # }
+    ssl_certificate /etc/letsencrypt/live/adminpage.p-e.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/adminpage.p-e.kr/privkey.pem;
 
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
+    }
+}
+
+server {
+    listen 80;
+    server_name adminpage.p-e.kr;
+
+    # Let's Encrypt 인증을 위한 경로 설정
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
     }
 
     error_page 404 /index.html;
