--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,9 @@ server {
     server_name adminpage.p-e.kr;
 
     location / {
-        return 301 https://$host$request_uri;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
     }
 
 }
