--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,10 +2,12 @@ server {
     listen 80;
     server_name adminpage.p-e.kr;
 
+   
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri /index.html;
     }
 
+    error_page 404 /index.html;
 }
