--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,11 @@ server {
     listen 80;
     server_name adminpage.p-e.kr;
 
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
    
     location / {
         root /usr/share/nginx/html;
