--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,11 +2,9 @@ server {
     listen 80;
     server_name adminpage.p-e.kr;
 
-
-    location / {
-        return 301 https://$host$request_uri;
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html;
     }
-
    
     location / {
         root /usr/share/nginx/html;
