--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,7 @@ server {
 
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
+        allow all;
     }
    
     location / {
