--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,7 @@ server {
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
         allow all;
+        default_type "text/plain";
     }
    
     location / {
