--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,19 @@
 server {
     listen 80;
     server_name adminpage.p-e.kr;
+    # server_name localhost;
 
+    # Let's Encrypt 인증을 위한 경로 설정
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html;
         allow all;
         default_type "text/plain";
     }
-   
+
+    # location / {
+    #     return 301 https://$host$request_uri;
+    # }
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
